--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,15 @@
 {
   "name": "inventory-neon-backend",
-  "version": "1.0.0",
+  "version": "1.0.0", 
   "type": "module",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node server.js"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
     "cors": "^2.8.5",
-    "express": "^4.19.0"
+    "express": "^4.19.0",
+    "dotenv": "^16.4.5"
   }
 }
