--- a/api/package.json
+++ b/api/package.json
@@ -11,8 +11,10 @@
     "@neondatabase/serverless": "^1.0.1",
     "cors": "^2.8.5",
     "express": "^4.19.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "pg": "^8.11.1"
   }
 }
+
 
 
